chore: doc cleanups and additions
