# internal/server/server.go
@@ -29,7 +29,7 @@ func Listen(ctx context.Context, dbClient *ent.Client) {
 	{
 		v1.GET("/movies", api.Movies)
 		v1.GET("/characters/:episodeId", api.Characters)
-		v1.GET("/comment/:episodeId", api.Comments)
+		v1.GET("/comments/:episodeId", api.Comments)
 		v1.POST("/comment/:episodeId", api.NewComment)
 	}
 
